2007-06-16  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>

	* Monodoc.Editor.mdp: Change from MonodocEditor.mdp to Monodoc.Editor.mdp
