@@ -38,6 +38,7 @@ public partial class EditorWindow : Gtk.Window {
 		try {
 			MonoDocument doc = new MonoDocument (dialog.Document);
 			DocumentBufferArchiver.Deserialize (docEditView.Buffer, doc.Text);
+			Console.WriteLine ("Serialize: \n" + DocumentBufferArchiver.Serialize (docEditView.Buffer));
 		} catch (ArgumentException argexp) {
 			Console.WriteLine (argexp.Message);
 		}
